links are buttons now and look good, youre welcom

--- a/src/index.css
+++ b/src/index.css
@@ -85,7 +85,105 @@ img:hover{
 }
 a{
   color: white;
-  border: 1px solid white;
+  /* border: 1px solid white; */
   display: flex;
   justify-content: space-between;
+}
+li{
+  color:whitesmoke;
+}
+p{
+  color: white;
+}
+.parent-div{
+display: flex;
+flex-direction: column;
+align-items: center;
+
+}
+.drinks-img{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 60%;
+
+}
+.vodka-img{
+  width: 200px;
+  height: 250px;
+  
+}
+.vodka-ptag{
+  position: absolute;
+   top: 600px;
+   left: 27%;
+   width: 100%;
+   width: 300px;
+   font-size: 30px;
+   height: 50px;
+}
+.gin-img{
+  width: 200px;
+  height: 250px;
+}
+.gin-ptag{
+  position: absolute;
+  top: 600px;
+  left: 45.5%;
+  width: 100%;
+  width: 300px;
+  font-size: 30px;
+  height: 50px;
+}
+.tequila-img{
+  width: 200px;
+  height: 250px;
+}
+.tequila-ptag{
+   position: absolute;
+   top: 600px;
+   left: 63%;
+   width: 100%;
+   width: 300px;
+   font-size: 30px;
+   height: 50px;
+}
+.scotch-img{
+  width: 200px;
+  height: 250px;
+}
+.scotch-ptag{
+  position: absolute;
+  top: 890px;
+  left: 26%;
+  width: 100%;
+  width: 300px;
+  font-size: 30px;
+  height: 50px;
+}
+.whiskey-img{
+  width: 200px;
+  height: 250px;
+}
+.whiskey-ptag{
+  position: absolute;
+  top: 890px;
+  left: 44%;
+  width: 100%;
+  width: 300px;
+  font-size: 30px;
+  height: 50px;
+}
+.rum-img{
+  width: 200px;
+  height: 250px;
+}
+.rum-ptag{
+  position: absolute;
+  top: 890px;
+  left: 63%;
+  width: 100%;
+  width: 300px;
+  font-size: 40px;
+  height: 50px;
 }
