--- a/src/drinkID.css
+++ b/src/drinkID.css
@@ -1,7 +1,7 @@
 .drink-name{
     width: 75%;
-    display:flex;
-    flex-direction: row;
+    /* display:flex;
+    flex-direction: row; */
     justify-content: center;
     margin: 0 auto;
     text-align: left;
@@ -14,4 +14,7 @@
   }
   li{
     list-style: none;
+  }
+  .detail-image{
+    float: left;
   }
