--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Rubik&display=swap')
+
 .gin, .tequila, .rum, .whiskey, .scotch, .vodka, .popular, .favorites{
     /* position: relative;
     align-items: center;
@@ -15,5 +17,6 @@
     margin-bottom: 50px;
     font-size: 20px;
     border-top: 1px solid yellow;
+    font-family: 'Rubik', sans-serif;
     
 }
