--- a/src/Header.css
+++ b/src/Header.css
@@ -1,11 +1,4 @@
-.gin, .tequila, .rum, .whiskey, .scotch, .vodka, .popular, .favorites{
-    /* position: relative;
-    align-items: center;
-    display: flex;
-    justify-content: space-evenly;
-    margin-bottom: 50px;
-    font-size: 20px; */
-}
+
 .drinks{
     border-bottom: 1px solid yellow;
     position: relative;
@@ -13,7 +6,9 @@
     display: flex;
     justify-content: space-evenly;
     margin-bottom: 50px;
-    font-size: 20px;
+    font-size: 27px;
     border-top: 1px solid yellow;
+    padding: 25px;
+   
     
 }
